--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1> Hello World</h1>
-<app-login (onShowRepos)="getRepos($event)"></app-login>
-<app-nav-menu></app-nav-menu>
-<router-outlet></router-outlet>
-<app-repos-table *ngIf="showTable" [dataSource]="this.repositories ? this.repositories : []"></app-repos-table>
+<div class="main-app">
+  <h1>GitHub Repositories</h1>
+  <app-nav-bar></app-nav-bar>
+  <router-outlet></router-outlet>
+</div>
