--- a/src/app/components/repos-table/repos-table.component.html
+++ b/src/app/components/repos-table/repos-table.component.html
@@ -4,29 +4,26 @@
         <th mat-header-cell *matHeaderCellDef> No. </th>
         <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1}} </td>
     </ng-container>
-
-    <ng-container matColumnDef="Name">
+    <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
-    <ng-container matColumnDef="Description">
+    <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> Description </th>
         <td mat-cell *matCellDef="let element"> {{element.description}} </td>
     </ng-container>
-    <ng-container matColumnDef="Language">
+    <ng-container matColumnDef="language">
         <th mat-header-cell *matHeaderCellDef> Language </th>
         <td mat-cell *matCellDef="let element"> {{element.language}} </td>
     </ng-container>
-    <ng-container matColumnDef="DefualtBranch">
-        <th mat-header-cell *matHeaderCellDef> Deault Branch </th>
-        <td mat-cell *matCellDef="let element"> {{element.defualtBranch}} </td>
+    <ng-container matColumnDef="defaultBranch">
+        <th mat-header-cell *matHeaderCellDef> Default Branch </th>
+        <td mat-cell *matCellDef="let element"> {{element.default_branch}} </td>
     </ng-container>
-    <ng-container matColumnDef="URL">
+    <ng-container matColumnDef="url">
         <th mat-header-cell *matHeaderCellDef> URL </th>
-        <td mat-cell *matCellDef="let element"> {{element.URL}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.url}} </td>
     </ng-container>
-
-
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
