--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<section id="authentication">
+<!-- <section id="authentication">
 
     <form class="form" #form="ngForm" (ngSubmit)="login(form.value)">
         <div>
@@ -9,4 +9,4 @@
         </div>
         <button type="submit">Register</button>
     </form>
-</section>
+</section> -->
