--- a/src/app/components/repos-table/repos-table.component.html
+++ b/src/app/components/repos-table/repos-table.component.html
@@ -22,7 +22,7 @@
     </ng-container>
     <ng-container matColumnDef="url">
         <th mat-header-cell *matHeaderCellDef> URL </th>
-        <td mat-cell *matCellDef="let element"> {{element.url}} </td>
+        <td mat-cell *matCellDef="let element"> <a [href]="element.url">{{element.url}}</a> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
